// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PopoverListItem renders 1`] = `
.emotion-0 {
  box-sizing: border-box;
  cursor: pointer;
  min-width: 100%;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 8px;
  padding-bottom: 8px;
  display: table;
  margin-top: 8px;
  margin-bottom: 8px;
}

<div
  className="emotion-0"
  data-cy="PopoverListItem"
>
  <Flex
    align="center"
    direction="row"
    gutterSize="xs"
    justify="flex-start"
    wrap="nowrap"
  >
    <FlexItem
      flex="shrink"
    />
    <FlexItem
      flex="grow"
    >
      item content content
    </FlexItem>
    <FlexItem
      flex="shrink"
    />
  </Flex>
</div>
`;

exports[`PopoverListItem renders active 1`] = `
.emotion-0 {
  box-sizing: border-box;
  cursor: pointer;
  min-width: 100%;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 8px;
  padding-bottom: 8px;
  display: table;
  background-color: var(--themeBgHover, #F7F8F9);
  margin-top: 8px;
  margin-bottom: 8px;
}

<div
  className="emotion-0"
  data-cy="PopoverListItem"
>
  <Flex
    align="center"
    direction="row"
    gutterSize="xs"
    justify="flex-start"
    wrap="nowrap"
  >
    <FlexItem
      flex="shrink"
    />
    <FlexItem
      flex="grow"
    >
      item content content
    </FlexItem>
    <FlexItem
      flex="shrink"
    />
  </Flex>
</div>
`;

exports[`PopoverListItem renders active and selected 1`] = `
.emotion-0 {
  box-sizing: border-box;
  cursor: pointer;
  min-width: 100%;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 8px;
  padding-bottom: 8px;
  display: table;
  background-color: var(--themeBgHover, #F7F8F9);
  background-color: var(--themeBgSelected, #7D58FF);
  color: #FFFFFF;
  background-color: #704fe5;
  margin-top: 8px;
  margin-bottom: 8px;
}

<div
  className="emotion-0"
  data-cy="PopoverListItem"
>
  <Flex
    align="center"
    direction="row"
    gutterSize="xs"
    justify="flex-start"
    wrap="nowrap"
  >
    <FlexItem
      flex="shrink"
    />
    <FlexItem
      flex="grow"
    >
      item content content
    </FlexItem>
    <FlexItem
      flex="shrink"
    />
  </Flex>
</div>
`;

exports[`PopoverListItem renders all appearances 1`] = `
.emotion-0 {
  box-sizing: border-box;
  cursor: pointer;
  min-width: 100%;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 8px;
  padding-bottom: 8px;
  display: table;
  background-color: var(--themeBgSelected, #7D58FF);
  color: #FFFFFF;
  margin-top: 8px;
  margin-bottom: 8px;
  color: var(--themeError, #EB293A);
  fill: var(--themeError, #EB293A);
}

<div
  className="emotion-0"
  data-cy="PopoverListItem"
>
  <Flex
    align="center"
    direction="row"
    gutterSize="xs"
    justify="flex-start"
    wrap="nowrap"
  >
    <FlexItem
      flex="shrink"
    />
    <FlexItem
      flex="grow"
    >
      item content content
    </FlexItem>
    <FlexItem
      flex="shrink"
    />
  </Flex>
</div>
`;

exports[`PopoverListItem renders disabled 1`] = `
.emotion-0 {
  box-sizing: border-box;
  cursor: pointer;
  min-width: 100%;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 8px;
  padding-bottom: 8px;
  display: table;
  background-color: transparent;
  color: var(--themeTextColorDisabled, #AEB0B4);
  margin-top: 8px;
  margin-bottom: 8px;
}

<div
  className="emotion-0"
  data-cy="PopoverListItem"
  disabled={true}
>
  <Flex
    align="center"
    direction="row"
    gutterSize="xs"
    justify="flex-start"
    wrap="nowrap"
  >
    <FlexItem
      flex="shrink"
    />
    <FlexItem
      flex="grow"
    >
      item content content
    </FlexItem>
    <FlexItem
      flex="shrink"
    />
  </Flex>
</div>
`;

exports[`PopoverListItem renders selected 1`] = `
.emotion-0 {
  box-sizing: border-box;
  cursor: pointer;
  min-width: 100%;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 8px;
  padding-bottom: 8px;
  display: table;
  background-color: var(--themeBgSelected, #7D58FF);
  color: #FFFFFF;
  margin-top: 8px;
  margin-bottom: 8px;
}

<div
  className="emotion-0"
  data-cy="PopoverListItem"
>
  <Flex
    align="center"
    direction="row"
    gutterSize="xs"
    justify="flex-start"
    wrap="nowrap"
  >
    <FlexItem
      flex="shrink"
    />
    <FlexItem
      flex="grow"
    >
      item content content
    </FlexItem>
    <FlexItem
      flex="shrink"
    />
  </Flex>
</div>
`;

exports[`PopoverListItem renders with icon and avatar 1`] = `
.emotion-0 {
  box-sizing: border-box;
  cursor: pointer;
  min-width: 100%;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 8px;
  padding-bottom: 8px;
  display: table;
  margin-top: 8px;
  margin-bottom: 8px;
}

<div
  className="emotion-0"
  data-cy="PopoverListItem"
/>
`;
